Refactor solution 49t3 based on the admin review.